Work on question 1

--- a/milestone_3.ipynb
+++ b/milestone_3.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +273,7 @@
        "Text(0.5, 1.0, 'Mean yearly (%) increase of different crops')"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +354,7 @@
    ],
    "source": [
     "# Creat new dataframe for meat production where indexes are years and columns are the different meat categories\n",
-    "tmp = meat_no_total.groupby(['Year', 'Item']).agg({'Value':'sum'}).reset_index().sort_values(by=['Year', 'Item'], ascending=True)#['Value'].shape\n",
+    "tmp = meat_no_total.groupby(['Year', 'Item']).agg({'Value':'sum'}).reset_index().sort_values(by=['Year', 'Item'], ascending=True)\n",
     "meat_world = pd.DataFrame(columns=meat_no_total.Item.sort_values().unique(), \n",
     "             index=tmp.Year.unique(),\n",
     "             data=tmp.Value.values.reshape(len(tmp.Year.unique()),len(meat_no_total.Item.unique())))\n",
@@ -366,7 +366,7 @@
     "ax.tick_params(labelsize=10)\n",
     "\n",
     "# Creat new dataframe for crops production where indexes are years and columns are the different crops categories\n",
-    "tmp = crops_no_total.groupby(['Year', 'Item']).agg({'Value':'sum'}).reset_index().sort_values(by=['Year', 'Item'], ascending=True)#['Value'].shape\n",
+    "tmp = crops_no_total.groupby(['Year', 'Item']).agg({'Value':'sum'}).reset_index().sort_values(by=['Year', 'Item'], ascending=True)\n",
     "crops_world = pd.DataFrame(columns=crops_no_total.Item.sort_values().unique(), \n",
     "             index=tmp.Year.unique(),\n",
     "             data=tmp.Value.values.reshape(len(tmp.Year.unique()),len(meat_no_total.Item.unique())))\n",
@@ -383,7 +383,7 @@
    "metadata": {},
    "source": [
     "When it comes to meat production, we are producing mostly pig, chicken and cattle and pig production is the biggest. \n",
-    "When it comes to crops production, we are producing mostly cereals which isn't surprising as cereals and wheat are included in the cereals category. "
+    "When it comes to crops production, we are producing mostly cereals which isn't surprising as rice and wheat are included in the cereals category. The production of 'meat, other', 'meat, equidae & camildae' and 'other crops' has been quite consistent since 1961 as their variance is very low compared to the others."
    ]
   },
   {
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -474,12 +474,14 @@
     "\n",
     "Africa : It seems as though the big production of buffalo and goat in Africa is what makes bovidae such a big production category. Game is also a big category in Africa and this is probably what gives the big increase of the 'others' category.\n",
     "\n",
-    "Oceania : It seems as though the big production sheep in Oceania is what makes bovidae such a big production category. Game is also a relatively big category in Oceania and this is probably what gives the big increase of the 'others' category."
+    "Oceania : It seems as though the big production sheep in Oceania is what makes bovidae such a big production category. Game is also a relatively big category in Oceania and this is probably what gives the big increase of the 'others' category.\n",
+    "\n",
+    "#### Crops production"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -508,15 +510,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can see that that most products have experienced a positive average growth yearly. Only production of other camelids and jute like fibres has decreased."
+    "**Observations:**\n",
+    "- South America is the only continent that has had a large increase in the crops category 'oilcrops & oilcakes'. This is not surprising as South America are for example harvesting rainforests to extract palm oil.\n",
+    "- Africa and Europe are the only continent that have the crops category 'roots & tubers' in their top three most produced crops in 2007. \n",
+    "- In 2007 the biggest crops category is 'cereals' as this is in the top two most produced categories for all continents. \n",
+    "- In 2007 and in warmer continents it is possible to see a larger fruit production (Africa, South America, Oceania).\n",
+    "- Asia is the only continent that has vegetables in the top two most produced in 2007."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Summary, question 1\n",
+    "\n",
+    "How has the crops and livestock production changed since the 1960s?\n",
+    "To get a general picture of how production has changed we start by looking at everything at a world-level.\n",
+    "\n",
+    "This question will serve as an intro to the whole project and look at the big trends in the world, with focus on products more than areas. We will mainly study total development of production (without normalizing for population), as this is how the production actually has developed and how the scale has changed during the 50 years.\n",
+    "We will follow these steps:\n",
+    "\n",
+    "- Get an overview of development by analyzing at world-level.\n",
+    "- Look if any special products have increased/decreased in popularity.\n",
+    "- Find statistical indicators showing the differences now and in 1960.\n",
+    "- Look for certain countries and areas that stand out.\n",
+    "\n",
+    "Food production has increased in all continents from 1961 to 2013 and today we are rpoducing more food per person than we did in 1961. We can also see that the way that the production has developped follows a general pattern, that is, the population growth in each respective continent. This makes sense as an increased population will require more food production in order to be able to feed all habitants. This also lead to the fact that every crop and meat category has increased production wise since 1961. No category has decreased in popularity on world level. However, when looking at the different continents it is possible to see decrease in popularity for some products. For example Europe has had a decrease in roots & tubers production but Africa has had a big increase in production of roots & tubers. Therefore, on a world level, roots & tubers production has increased but it is no longer as popular in Europe. As mentioned, most categories have increased in production, however the smallest crops/meats categories have held a quite consistent production quantity over the years (visible in the box plots). These categories are 'crops, other', 'meat, other' and 'meat, equidae & camelidae'. Asia, Oceania and South America have had a lot larger increase in food production compared to population. And Europe has had a much larger increase in population compared to food production.\n",
+    "\n",
+    "The three most produced meat categories are pig, chicken and cattle with pig being the largest one. In fourth place, we have bovidae, since it is big in Oceania (sheep) and Africa (goat & buffalo). Africa, Asia and South America have had a larger increase in meat producation than both crops production and population growth. Something that these continents have in common are that they are going through industrialisation and getting richer and healthier. Europe, Oceania and North America haven't had as big of a development in this area since 1961. More money = afford more meat?\n",
+    "\n",
+    "The biggest crops production category is cereals which is not not surprising as this includes rice and wheat. Second and third place are coarse grain and roots & tubers."
+   ]
   },
   {
    "cell_type": "markdown",
