Emils work added

--- a/emissions_cleaning.ipynb
+++ b/emissions_cleaning.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
        "2  Aggregate, may include official, semi-official...   NaN  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -317,8 +317,8 @@
      "output_type": "stream",
      "text": [
       "The data contain(s) the following: \n",
-      "    area(s)    : ['Africa', 'Northern America', 'South America', 'Asia', 'Europe', 'Oceania']\n",
-      "    years      : 1961 - 2016\n",
+      "    area(s)    : ['World', 'Africa', 'Northern America', 'South America', 'Asia', 'Europe', 'Oceania']\n",
+      "    years      : 1961 - 2017\n",
       "    item(s)    : ['Cereals excluding rice', 'Rice, paddy', 'Meat, cattle', 'Milk, whole fresh cow', 'Meat, goat', 'Milk, whole fresh goat', 'Meat, buffalo', 'Milk, whole fresh buffalo', 'Meat, sheep', 'Milk, whole fresh sheep', 'Milk, whole fresh camel', 'Meat, chicken', 'Eggs, hen, in shell', 'Meat, pig']\n",
       "    elements(s): ['Emissions (CO2eq)', 'Production']\n",
       "    unit(s)    : ['gigagrams', 'tonnes']\n"
@@ -326,7 +326,7 @@
     }
    ],
    "source": [
-    "categorized_emission_data = pd.read_csv('raw_data/Emission_data.csv', sep = ',', encoding = 'latin-1')\n",
+    "categorized_emission_data = pd.read_csv('raw_data/Emissions_cat.csv', sep = ',', encoding = 'latin-1')\n",
     "explain_df(categorized_emission_data)"
    ]
   },
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -347,8 +347,8 @@
      "output_type": "stream",
      "text": [
       "The data contain(s) the following: \n",
-      "    area(s)    : ['Africa', 'Northern America', 'South America', 'Asia', 'Europe', 'Oceania']\n",
-      "    years      : 1961 - 2016\n",
+      "    area(s)    : ['World', 'Africa', 'Northern America', 'South America', 'Asia', 'Europe', 'Oceania']\n",
+      "    years      : 1961 - 2017\n",
       "    item(s)    : ['Cereals excluding rice', 'Rice, paddy', 'Meat, cattle', 'Milk, whole fresh cow', 'Meat, goat', 'Milk, whole fresh goat', 'Meat, buffalo', 'Milk, whole fresh buffalo', 'Meat, sheep', 'Milk, whole fresh sheep', 'Milk, whole fresh camel', 'Meat, chicken', 'Eggs, hen, in shell', 'Meat, pig']\n",
       "    elements(s): ['Emissions (CO2eq)']\n",
       "    unit(s)    : ['gigagrams']\n",
@@ -412,8 +412,8 @@
        "      <td>0</td>\n",
        "      <td>EI</td>\n",
        "      <td>Emissions intensities</td>\n",
-       "      <td>5100</td>\n",
-       "      <td>Africa</td>\n",
+       "      <td>5000</td>\n",
+       "      <td>World</td>\n",
        "      <td>7231</td>\n",
        "      <td>Emissions (CO2eq)</td>\n",
        "      <td>1718</td>\n",
@@ -421,7 +421,7 @@
        "      <td>1961</td>\n",
        "      <td>1961</td>\n",
        "      <td>gigagrams</td>\n",
-       "      <td>6404.6437</td>\n",
+       "      <td>105368.1674</td>\n",
        "      <td>A</td>\n",
        "      <td>Aggregate, may include official, semi-official...</td>\n",
        "    </tr>\n",
@@ -429,8 +429,8 @@
        "      <td>1</td>\n",
        "      <td>EI</td>\n",
        "      <td>Emissions intensities</td>\n",
-       "      <td>5100</td>\n",
-       "      <td>Africa</td>\n",
+       "      <td>5000</td>\n",
+       "      <td>World</td>\n",
        "      <td>7231</td>\n",
        "      <td>Emissions (CO2eq)</td>\n",
        "      <td>1718</td>\n",
@@ -438,7 +438,7 @@
        "      <td>1962</td>\n",
        "      <td>1962</td>\n",
        "      <td>gigagrams</td>\n",
-       "      <td>6841.1636</td>\n",
+       "      <td>113427.2440</td>\n",
        "      <td>A</td>\n",
        "      <td>Aggregate, may include official, semi-official...</td>\n",
        "    </tr>\n",
@@ -446,8 +446,8 @@
        "      <td>2</td>\n",
        "      <td>EI</td>\n",
        "      <td>Emissions intensities</td>\n",
-       "      <td>5100</td>\n",
-       "      <td>Africa</td>\n",
+       "      <td>5000</td>\n",
+       "      <td>World</td>\n",
        "      <td>7231</td>\n",
        "      <td>Emissions (CO2eq)</td>\n",
        "      <td>1718</td>\n",
@@ -455,7 +455,7 @@
        "      <td>1963</td>\n",
        "      <td>1963</td>\n",
        "      <td>gigagrams</td>\n",
-       "      <td>7246.6931</td>\n",
+       "      <td>118932.4544</td>\n",
        "      <td>A</td>\n",
        "      <td>Aggregate, may include official, semi-official...</td>\n",
        "    </tr>\n",
@@ -464,20 +464,20 @@
        "</div>"
       ],
       "text/plain": [
-       "  Domain Code                 Domain  Area Code    Area  Element Code  \\\n",
-       "0          EI  Emissions intensities       5100  Africa          7231   \n",
-       "1          EI  Emissions intensities       5100  Africa          7231   \n",
-       "2          EI  Emissions intensities       5100  Africa          7231   \n",
+       "  Domain Code                 Domain  Area Code   Area  Element Code  \\\n",
+       "0          EI  Emissions intensities       5000  World          7231   \n",
+       "1          EI  Emissions intensities       5000  World          7231   \n",
+       "2          EI  Emissions intensities       5000  World          7231   \n",
        "\n",
        "             Element  Item Code                    Item  Year Code  Year  \\\n",
        "0  Emissions (CO2eq)       1718  Cereals excluding rice       1961  1961   \n",
        "1  Emissions (CO2eq)       1718  Cereals excluding rice       1962  1962   \n",
        "2  Emissions (CO2eq)       1718  Cereals excluding rice       1963  1963   \n",
        "\n",
-       "        Unit      Value Flag  \\\n",
-       "0  gigagrams  6404.6437    A   \n",
-       "1  gigagrams  6841.1636    A   \n",
-       "2  gigagrams  7246.6931    A   \n",
+       "        Unit        Value Flag  \\\n",
+       "0  gigagrams  105368.1674    A   \n",
+       "1  gigagrams  113427.2440    A   \n",
+       "2  gigagrams  118932.4544    A   \n",
        "\n",
        "                                    Flag Description  \n",
        "0  Aggregate, may include official, semi-official...  \n",
@@ -485,7 +485,7 @@
        "2  Aggregate, may include official, semi-official...  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -634,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -694,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -720,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -732,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -820,73 +820,73 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>331</td>\n",
-       "      <td>South America</td>\n",
-       "      <td>Emissions (CO2eq)</td>\n",
-       "      <td>2012</td>\n",
-       "      <td>gigagrams</td>\n",
-       "      <td>13038.5218</td>\n",
-       "      <td>Sheep</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>332</td>\n",
-       "      <td>South America</td>\n",
+       "      <td>394</td>\n",
+       "      <td>World</td>\n",
        "      <td>Emissions (CO2eq)</td>\n",
        "      <td>2013</td>\n",
        "      <td>gigagrams</td>\n",
-       "      <td>13089.1212</td>\n",
+       "      <td>244297.4810</td>\n",
        "      <td>Sheep</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>333</td>\n",
-       "      <td>South America</td>\n",
+       "      <td>395</td>\n",
+       "      <td>World</td>\n",
        "      <td>Emissions (CO2eq)</td>\n",
        "      <td>2014</td>\n",
        "      <td>gigagrams</td>\n",
-       "      <td>12595.7720</td>\n",
+       "      <td>242931.4522</td>\n",
        "      <td>Sheep</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>334</td>\n",
-       "      <td>South America</td>\n",
+       "      <td>396</td>\n",
+       "      <td>World</td>\n",
        "      <td>Emissions (CO2eq)</td>\n",
        "      <td>2015</td>\n",
        "      <td>gigagrams</td>\n",
-       "      <td>12690.6373</td>\n",
+       "      <td>252227.3091</td>\n",
        "      <td>Sheep</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>335</td>\n",
-       "      <td>South America</td>\n",
+       "      <td>397</td>\n",
+       "      <td>World</td>\n",
        "      <td>Emissions (CO2eq)</td>\n",
        "      <td>2016</td>\n",
        "      <td>gigagrams</td>\n",
-       "      <td>12613.8930</td>\n",
+       "      <td>253947.9121</td>\n",
+       "      <td>Sheep</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>398</td>\n",
+       "      <td>World</td>\n",
+       "      <td>Emissions (CO2eq)</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>gigagrams</td>\n",
+       "      <td>257263.1569</td>\n",
        "      <td>Sheep</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>336 rows × 6 columns</p>\n",
+       "<p>399 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "              Area            Element  Year       Unit       Value   Item\n",
-       "0           Africa  Emissions (CO2eq)  1961  gigagrams  26107.8934  Sheep\n",
-       "1           Africa  Emissions (CO2eq)  1962  gigagrams  25742.8884  Sheep\n",
-       "2           Africa  Emissions (CO2eq)  1963  gigagrams  25928.7068  Sheep\n",
-       "3           Africa  Emissions (CO2eq)  1964  gigagrams  26531.4870  Sheep\n",
-       "4           Africa  Emissions (CO2eq)  1965  gigagrams  27693.8435  Sheep\n",
-       "..             ...                ...   ...        ...         ...    ...\n",
-       "331  South America  Emissions (CO2eq)  2012  gigagrams  13038.5218  Sheep\n",
-       "332  South America  Emissions (CO2eq)  2013  gigagrams  13089.1212  Sheep\n",
-       "333  South America  Emissions (CO2eq)  2014  gigagrams  12595.7720  Sheep\n",
-       "334  South America  Emissions (CO2eq)  2015  gigagrams  12690.6373  Sheep\n",
-       "335  South America  Emissions (CO2eq)  2016  gigagrams  12613.8930  Sheep\n",
+       "       Area            Element  Year       Unit        Value   Item\n",
+       "0    Africa  Emissions (CO2eq)  1961  gigagrams   26107.8934  Sheep\n",
+       "1    Africa  Emissions (CO2eq)  1962  gigagrams   25742.8884  Sheep\n",
+       "2    Africa  Emissions (CO2eq)  1963  gigagrams   25928.7068  Sheep\n",
+       "3    Africa  Emissions (CO2eq)  1964  gigagrams   26531.4870  Sheep\n",
+       "4    Africa  Emissions (CO2eq)  1965  gigagrams   27693.8435  Sheep\n",
+       "..      ...                ...   ...        ...          ...    ...\n",
+       "394   World  Emissions (CO2eq)  2013  gigagrams  244297.4810  Sheep\n",
+       "395   World  Emissions (CO2eq)  2014  gigagrams  242931.4522  Sheep\n",
+       "396   World  Emissions (CO2eq)  2015  gigagrams  252227.3091  Sheep\n",
+       "397   World  Emissions (CO2eq)  2016  gigagrams  253947.9121  Sheep\n",
+       "398   World  Emissions (CO2eq)  2017  gigagrams  257263.1569  Sheep\n",
        "\n",
-       "[336 rows x 6 columns]"
+       "[399 rows x 6 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -895,6 +895,20 @@
     "# Data for each countries sheep emissions per year\n",
     "sheep_data.reset_index()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
