--- a/milestone_3.ipynb
+++ b/milestone_3.ipynb
@@ -1175,10 +1175,10 @@
     "\n",
     "****Conclusions question 4****\n",
     "\n",
-    "- Meat and crop production has increased which has led to higher emissions\n",
-    "- Most of the meat and crop production has become more effictive which has lowered the emission per produced tonnes.\n",
-    "- Meat generally emits much more than the crops studied in this question and is therefor better to eat for the environment.\n",
-    "- Meat from the pig and chicken is much better to eat compared to sheep, cattle, goat and buffalo"
+    "- Meat and crop production has increased which has led to higher emissions.\n",
+    "- Most of the meat and crop production has become more effective which has lowered the emission per produced tonnes.\n",
+    "- The meat categories buffalo, cattle, goat and pig emit much more than the crops studied in this question and it is therefore better for the environment to eat crops rather than eating meat from these categories.\n",
+    "- Meat from pig and chicken are much better to eat compared to sheep, cattle, goat and buffalo as they seem to emit close to what cereals and rice emit."
    ]
   },
   {
