--- a/project_notebook.ipynb
+++ b/project_notebook.ipynb
@@ -4836,8 +4836,7 @@
     "food_2007 = food_total[food_total['Year'] == 2007].sort_values(by=['Area']).reset_index(drop=True)\n",
     "\n",
     "\n",
-    "bar_plot(food_1961, food_2007, 'Normalized Production of Crops and Meats per continent.')\n",
-    "plt.savefig('norm_prod.png')\n"
+    "bar_plot(food_1961, food_2007, 'Normalized Production of Crops and Meats per continent.')\n"
    ]
   },
   {
@@ -4890,7 +4889,6 @@
     "         center = food_2007_means['Norm Total Production'] )\n",
     "\n",
     "\n",
-    "plt.savefig('norm_prod_average.png')\n",
     "print('Average Total production in 1961: {} tonnes per person'.format(np.around(food_1961_means['Norm Total Production'], decimals=2)))\n",
     "print('Average Total production in 2007: {} tonnes per person'.format(np.around(food_2007_means['Norm Total Production'], decimals=2)))"
    ]
